# homework-4-rdlynx19

./: .gitignore  README.md  citations.txt  save_map.sh
maps/: autonomous_map.pgm  autonomous_map.yaml
nubot_nav/: package.xml  setup.py
nubot_nav/config/: github_nav2_params.yaml  nav2_params.yaml  nubot_config.rviz
nubot_nav/launch/: explore.launch.xml  manual_explore.launch.xml
nubot_nav/nubot_nav/: explore.py
