<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nubot_nav</name>
  <version>0.0.0</version>
  <description>Mapping and navigating an environment using the slam_toolbox</description>
  <maintainer email="pushkardave.vnit@gmail.com">redhairedlynx</maintainer>
  <license>MIT</license>

  <exec_depend>nubot</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
